# sandslash

./: .dockerignore  .gitignore  AGENT_WORKFLOW.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  cliff.toml  railway.toml  release.toml
.claude/agents/: auditor-worker.md  build-validator.md  feature-evaluator.md  pr-creator.md  project-planner.md  rust-worker.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
benches/: README.md  fetch_throughput.rs  page_audit_throughput.rs  parse_dom.rs
docs/: .env.example  AGENT_WORKFLOW.md  CORE_FEATURES_DOCUMENTATION_PLAN.md  DEPLOY.md  IMPLEMENTATION.md  PLAN.md  POSTGRES_SETUP.md  POST_MVP_FEATURES.md  RELEASING.md  RUNBOOK.md
docs/rust/: 01-ownership-borrowing.md  02-send-sync.md  03-trait-objects.md  04-async-trait.md  05-error-handling.md  06-tokio-spawn.md  07-channels-mpsc.md  08-arc-vs-rc.md  09-guards-across-await.md  10-spawn-blocking.md  11-semaphore.md  13-cow-str.md  14-lazylockonce-cell.md  15-consistent-hashing.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: db.ts  history.test.ts  history.ts  migrate.ts  schema.sql
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  pipeline.rs
src/audit/: canonical.rs  headings.rs  https.rs  (+10 more)
tests/: audit_https.rs  crawler_engine.rs  crawler_pipeline.rs  crawler_robots_gate.rs  diff_integration.rs  frontier_redis.rs  integration.rs  links_audit.rs  pipeline_full_audit.rs  rate_limiter.rs  robots_auditor.rs  safety_valves.rs  server_sse.rs  sitemap_auditor.rs
(+65 files in other folders)
