[package]
name = "sandslash"
version = "0.5.0"
edition = "2024"
description = "CLI SEO auditing tool"
license = "AGPL-3.0-only"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "stream"] }
scraper = "0.22"
url = { version = "2", features = ["serde"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
governor = "0.7"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
encoding_rs = "0.8"
owo-colors = "4"
comfy-table = "7"
indicatif = "0.17"
indicatif-log-bridge = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = "0.37"
nonzero_ext = "0.3"
futures = "0.3"
dotenvy = "0.15"

[dev-dependencies]
wiremock = "0.6"
pretty_assertions = "1"
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "fetch_throughput"
harness = false

[[bench]]
name = "page_audit_throughput"
harness = false

[[bench]]
name = "parse_dom"
harness = false

[profile.dev.package."*"]
opt-level = 1

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
